--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,15 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-list  link" href="./index.html">Студія</a>
+              <a class="header-link link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
-              <a class="header-list current link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-link current link" href="./portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li class="header-item">
-              <a class="header-list link" href="#">Контакти</a>
+              <a class="header-link link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -83,9 +85,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Технокряк</h2>
-                <p class="img-tex">Веб-сайт</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Технокряк</h2>
+                  <p class="img-tex">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href=""
@@ -95,9 +99,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Постер new orlean vs golden star</h2>
-                <p class="img-tex">Дизайн</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Постер new orlean vs golden star</h2>
+                  <p class="img-tex">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -107,9 +113,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Ресторан seafood</h2>
-                <p class="img-tex">Додаток</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Ресторан seafood</h2>
+                  <p class="img-tex">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -119,9 +127,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Проєкт prime</h2>
-                <p class="img-tex">Маркетинг</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Проєкт prime</h2>
+                  <p class="img-tex">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -131,9 +141,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Проєкт boxes</h2>
-                <p class="img-tex">Додаток</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Проєкт boxes</h2>
+                  <p class="img-tex">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -143,9 +155,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Inspiration has no orders</h2>
-                <p class="img-tex">Веб-сайт</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Inspiration has no orders</h2>
+                  <p class="img-tex">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -155,9 +169,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Видання limited edition</h2>
-                <p class="img-tex">Дизайн</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Видання limited edition</h2>
+                  <p class="img-tex">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -167,9 +183,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Проєкт lab</h2>
-                <p class="img-tex">Маркетинг</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Проєкт lab</h2>
+                  <p class="img-tex">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="img-item list">
               <a class="img-link link" href="#"
@@ -179,9 +197,11 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="title-img">Growing business</h2>
-                <p class="img-tex">Додаток</p></a
-              >
+                <div class="title-img-tex">
+                  <h2 class="title-img">Growing business</h2>
+                  <p class="img-tex">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
