--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-list current link" href="./index.html">Студія</a>
+              <a class="header-link current link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
-              <a class="header-list link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-link link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="header-item">
-              <a class="header-list link" href="#">Контакти</a>
+              <a class="header-link link" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -136,8 +136,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name-title">Ігор Дем'яненко</h3>
-              <p class="profession">Product Designer</p>
+              <div class="containar-tex">
+                <h3 class="name-title">Ігор Дем'яненко</h3>
+                <p class="profession">Product Designer</p>
+              </div>
             </li>
             <li class="team-image list">
               <img
@@ -146,8 +148,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name-title">Ольга Рєпіна</h3>
-              <p class="profession">Frontend Developer</p>
+              <div class="containar-tex">
+                <h3 class="name-title">Ольга Рєпіна</h3>
+                <p class="profession">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-image list">
               <img
@@ -156,8 +160,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name-title">Микола Тарасов</h3>
-              <p class="profession">Marketing</p>
+              <div class="containar-tex">
+                <h3 class="name-title">Микола Тарасов</h3>
+                <p class="profession">Marketing</p>
+              </div>
             </li>
             <li class="team-image list">
               <img
@@ -166,8 +172,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name-title">Михайло Єрмаков</h3>
-              <p class="profession">UI Designer</p>
+              <div class="containar-tex">
+                <h3 class="name-title">Михайло Єрмаков</h3>
+                <p class="profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
